Variable classnames in parser

--- a/TODO
+++ b/TODO
@@ -13,6 +13,9 @@ NordeaPersonal
     Ska kräva clearing för alla personnummer.. (läs på: används båda för personnummer-konto??)
     OBS: nu finns ett flaky test, ibland blir det fel med datum...
         https://travis-ci.org/byrokrat/banking/jobs/49048054
+    Egen klass som kan getPersonalId()...
+
+Implementera GIRO
 
 Swedbank
     oklart från BG910.pdf vilka swedbank konton som har en clearing-number checkdigit
@@ -20,11 +23,7 @@ Swedbank
     kräver ändringar i structure mm...
     jag lyckas inte heller fånga när struct är fel över 16 siffror...
 
-Krävs det andra typer av lösningar för att implementera giro klasserna??
-    Ska jag i så fall istället använda BankAccount (istället för AccountNumber) för de "vanliga" typerna?
-    i så fall kan AccountNumberInterface heta AccountNumber igen..
-
-Mata in all data från BgcData...
+Mata in all data från BGC...
 
 Sedan finns det några fler issues på github att fixa...
 
